# app/static/swagger.json
@@ -5,7 +5,7 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/taks": {
+        "/api/tareas": {
             "get": {
                 "summary": "Obtiene la lista de todas las tareas",
                 "security": [
@@ -21,7 +21,7 @@
                                 "schema": {
                                     "type": "array",
                                     "items": {
-                                        "$ref": "#/components/schemas/Task"
+                                        "$ref": "#/components/schemas/Tarea"
                                     }
                                 }
                             }
@@ -40,7 +40,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/Task"
+                                "$ref": "#/components/schemas/Tarea"
                             }
                         }
                     }
@@ -51,7 +51,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Task"
+                                    "$ref": "#/components/schemas/Tarea"
                                 }
                             }
                         }
@@ -59,7 +59,7 @@
                 }
             }
         },
-        "/api/taks/{id}": {
+        "/api/tareas/{id}": {
             "get": {
                 "summary": "Obtiene una tarea específico por su ID",
                 "security": [
@@ -83,7 +83,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Task"
+                                    "$ref": "#/components/schemas/Tarea"
                                 }
                             }
                         }
@@ -114,7 +114,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/Task"
+                                "$ref": "#/components/schemas/Tarea"
                             }
                         }
                     }
@@ -125,7 +125,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Task"
+                                    "$ref": "#/components/schemas/Tarea"
                                 }
                             }
                         }
@@ -229,7 +229,7 @@
             }
         },
         "schemas": {
-            "Task": {
+            "Tarea": {
                 "type": "object",
                 "properties": {
                     "id": {
@@ -239,7 +239,11 @@
                     "title": {
                         "type": "string"
                     },
+                    
                     "description": {
+                        "type": "string"
+                    },
+                    "status":{
                         "type": "string"
                     },
                     "created_at": {
